--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -76,8 +76,7 @@
       ["osoi", "lambat"],
       ["atarashii", "baru"],
       ["furui", "lama"],
-      ["chiisai", "kecil"]
-    ];
+      ["chiisai", "kecil"],
       ["watashi", "saya"],
       ["sensei", "guru"],
       ["gakusei", "mahasiswa"],
