--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
       <button onclick="goTo('kuis')">📝 Kuis Hiragana & Katakana</button>
       <button onclick="goTo('kanji')">🈶 Kuis Kunyomi Kanji</button>
-      <button onclick="gotTo('kotoba')">📔 Kotoba Minna</button>
-      <button onclick="goTo('n5kosakata')">📒 Kosakata N5</button>
+      <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
+      <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
     </div>
   </div>
 
