--- a/kosakata.html
+++ b/kosakata.html
@@ -70,7 +70,9 @@
     const data = [
       ["neko", "kucing"],["inu", "anjing"],["hon", "buku"],["kuruma", "mobil"],
       ["mizu", "air"],["sora", "langit"],["yama", "gunung"],["kawa", "sungai"],
-      ["ki", "pohon"],["hana", "bunga"],["arigatou gozaimasu", "terimakasih"]
+      ["ki", "pohon"],["hana", "bunga"],["arigatou gozaimasu", "terimakasih"],
+      ["konnichiwa", "halo"],["ohayougozaimasu", "selamat pagi"],["konbanwa", "selamat malam"],
+      ["oyasuminasai", "selamat istirahat"],["sayounara", "sampai jumpa"]
     ];
     let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
