--- a/kosakata.html
+++ b/kosakata.html
@@ -72,7 +72,13 @@
       ["mizu", "air"],["sora", "langit"],["yama", "gunung"],["kawa", "sungai"],
       ["ki", "pohon"],["hana", "bunga"],["arigatou gozaimasu", "terimakasih"],
       ["konnichiwa", "halo"],["ohayougozaimasu", "selamat pagi"],["konbanwa", "selamat malam"],
-      ["oyasuminasai", "selamat istirahat"],["sayounara", "sampai jumpa"]
+      ["oyasuminasai", "selamat istirahat"],["sayounara", "sampai jumpa"],["getsuyoubi", "senin"],
+      ["kayoubi", "selasa"],["suiyoubi", "rabu"],["mokuyoubi", "kamis"],["kinyoubi", "jumat"],
+      ["doyoubi", "sabtu"],["nichiyoubi", "minggu"],["kyoo", "hari ini"],["kinoo", "kemarin"],
+      ["asatte", "lusa"],["otootoi", "kemarin dulu"],["asa", "pagi"],["kesa", "tadi pagi"],
+      ["ban/yoru", "malam"],["yuube", "tadi malam"],["konban", "malam ini"],["ashita", "besok"],
+      ["mainichi", "setiap hari"],["maiasa", "setiap pagi"],["maiban", "setiap malam"],
+      ["konshuu", "minggu ini"],["senshuu", "minggu lalu"],["raishuu", "minggu depan"]
     ];
     let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
