--- a/kosakata.html
+++ b/kosakata.html
@@ -78,7 +78,9 @@
       ["asatte", "lusa"],["otootoi", "kemarin dulu"],["asa", "pagi"],["kesa", "tadi pagi"],
       ["ban/yoru", "malam"],["yuube", "tadi malam"],["konban", "malam ini"],["ashita", "besok"],
       ["mainichi", "setiap hari"],["maiasa", "setiap pagi"],["maiban", "setiap malam"],
-      ["konshuu", "minggu ini"],["senshuu", "minggu lalu"],["raishuu", "minggu depan"]
+      ["konshuu", "minggu ini"],["senshuu", "minggu lalu"],["raishuu", "minggu depan"],
+      ["shikisai", "warna"],["pinku", "pink"],["anshoku", "gelap"],["meishoku", "cerah"],
+      ["kiiro", "kuning"],["kiniro/konjiki", "emas"],["giniro", "perak"],["kuroi", "hitam"]
     ];
     let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
