--- a/kotoba.html
+++ b/kotoba.html
@@ -62,7 +62,9 @@
   </div>
   <script>
     const data = [
-      ["watashi", "saya"],
+      ["わたし", "saya"],
+      ["わたしたち", "kami"],
+      ["あなた", "kamu"],  
       ["sensei", "guru"],
       ["gakusei", "mahasiswa"],
       ["isha", "dokter"],
