--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -91,7 +91,12 @@
       ["isu", "kursi"],
       ["tabemasu", "makan"],
       ["nomimasu", "minum"],
-      ["mimasu", "melihat"]
+      ["mimasu", "melihat"],
+      ["あう", "bertemu"],
+      ["あお", "biru"],
+      ["あおい", "biru"],
+      ["あか", "merah"],
+      ["あかい", "merah"],
     ];
 
     let questions = [];
