--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -96,7 +96,7 @@
       ["あお", "biru"],
       ["あおい", "biru"],
       ["あか", "merah"],
-      ["あかい", "merah"],
+      ["あかい", "merah"]
     ];
 
     let questions = [];
