--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -96,7 +96,9 @@
       ["あお", "biru"],
       ["あおい", "biru"],
       ["あか", "merah"],
-      ["あかい", "merah"]
+      ["あかい", "merah"],
+      ["あかるい", "cerah"],
+      ["あき", "musim gugur"],
     ];
 
     let questions = [];
