--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -99,6 +99,11 @@
       ["あかい", "merah"],
       ["あかるい", "cerah"],
       ["あき", "musim gugur"],
+      ["あく,ひらく", "membuka, membeberkan"],
+      ["あける", "membuka"],
+      ["あげる", "mengangkat, memberi"],
+      ["あさ", "pagi"],
+      ["あさごはん", "sarapan"],
     ];
 
     let questions = [];
