--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -104,6 +104,14 @@
       ["あげる", "mengangkat, memberi"],
       ["あさ", "pagi"],
       ["あさごはん", "sarapan"],
+      ["あさって", "lusa"],
+      ["あし", "kaki"],
+      ["あした", "besok"],
+      ["あそこ", "disana"],
+      ["あそぶ", "bermain"],
+      ["あたたかい", "hangat"],
+      ["あたま", "kepala"],
+      ["あたらし", "baru"]
     ];
 
     let questions = [];
