--- a/kotoba.html
+++ b/kotoba.html
@@ -64,7 +64,14 @@
     const data = [
       ["わたし", "saya"],
       ["わたしたち", "kami"],
-      ["あなた", "kamu"],  
+      ["あなた", "kamu"],
+      ["あのひと", "orang itu"],
+      ["あのかた", "orang itu(sopan)"],
+      ["みなさん", "anda sekalian"],
+      ["~さん", ""],
+      ["~ちゃん", ""],
+      ["~くん", ""],
+      ["~じん", ""],
       ["sensei", "guru"],
       ["gakusei", "mahasiswa"],
       ["isha", "dokter"],
