--- a/kotoba.html
+++ b/kotoba.html
@@ -68,10 +68,10 @@
       ["あのひと", "orang itu"],
       ["あのかた", "orang itu(sopan)"],
       ["みなさん", "anda sekalian"],
-      ["~さん", ""],
-      ["~ちゃん", ""],
-      ["~くん", ""],
-      ["~じん", ""],
+      ["~さん", "(sdr,tuan,nyonya)"],
+      ["~ちゃん", "(akhiran anak lk/pr)"],
+      ["~くん", "(akhiran anak lk"],
+      ["~じん", "(warga negara)"],
       ["sensei", "guru"],
       ["gakusei", "mahasiswa"],
       ["isha", "dokter"],
