--- a/kotoba.html
+++ b/kotoba.html
@@ -72,7 +72,8 @@
       ["~ちゃん", "(akhiran anak lk/pr)"],
       ["~くん", "(akhiran anak lk"],
       ["~じん", "(warga negara)"],
-      ["sensei", "guru"],
+      ["せんせい", "guru"],
+      ["かゃようし", "guru(formal)"],
       ["gakusei", "mahasiswa"],
       ["isha", "dokter"],
       ["kaisha", "perusahaan"],
