--- a/kotoba.html
+++ b/kotoba.html
@@ -73,8 +73,8 @@
       ["~くん", "(akhiran anak lk"],
       ["~じん", "(warga negara)"],
       ["せんせい", "guru"],
-      ["かゃようし", "guru(formal)"],
-      ["gakusei", "mahasiswa"],
+      ["きょうし", "guru(formal)"],
+      ["がくせい", "mahasiswa"],
       ["isha", "dokter"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
