--- a/kotoba.html
+++ b/kotoba.html
@@ -75,6 +75,8 @@
       ["せんせい", "guru"],
       ["きょうし", "guru(formal)"],
       ["がくせい", "mahasiswa"],
+      ["かいしゃいん", "pegawai perusahaan"],
+      ["しゃいん", ""],
       ["isha", "dokter"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
