--- a/kotoba.html
+++ b/kotoba.html
@@ -76,7 +76,8 @@
       ["きょうし", "guru(formal)"],
       ["がくせい", "mahasiswa"],
       ["かいしゃいん", "pegawai perusahaan"],
-      ["しゃいん", ""],
+      ["しゃいん", "pegawai perusahaan(+nma prusahaan)"],
+      ["ぎんこういん", "pegawai bank"],
       ["isha", "dokter"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
