--- a/kotoba.html
+++ b/kotoba.html
@@ -70,7 +70,7 @@
       ["みなさん", "anda sekalian"],
       ["~さん", "(sdr,tuan,nyonya)"],
       ["~ちゃん", "(akhiran anak lk/pr)"],
-      ["~くん", "(akhiran anak lk"],
+      ["~くん", "(akhiran anak lk)"],
       ["~じん", "(warga negara)"],
       ["せんせい", "guru"],
       ["きょうし", "guru(formal)"],
