--- a/kotoba.html
+++ b/kotoba.html
@@ -78,7 +78,7 @@
       ["かいしゃいん", "pegawai perusahaan"],
       ["しゃいん", "pegawai perusahaan(+nma prusahaan)"],
       ["ぎんこういん", "pegawai bank"],
-      ["isha", "dokter"],
+      ["いしゃ", "dokter"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
