--- a/kotoba.html
+++ b/kotoba.html
@@ -79,6 +79,10 @@
       ["しゃいん", "pegawai perusahaan(+nma prusahaan)"],
       ["ぎんこういん", "pegawai bank"],
       ["いしゃ", "dokter"],
+      ["けんきゅしゃ", "peneliti"],
+      ["エンジ二ア", "enginer"],
+      ["だいがく", "universitas"],
+      ["びょういん", "rumah sakit"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
