--- a/kotoba.html
+++ b/kotoba.html
@@ -83,6 +83,11 @@
       ["エンジ二ア", "enginer"],
       ["だいがく", "universitas"],
       ["びょういん", "rumah sakit"],
+      ["でんき", "lampu,listrik"],
+      ["だれ", "siapa"],
+      ["どなた", "siapa(sopan)"],
+      ["~さい", "umur,tahun"],
+      ["なんさい", "berapa umur"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
