--- a/kotoba.html
+++ b/kotoba.html
@@ -88,6 +88,9 @@
       ["どなた", "siapa(sopan)"],
       ["~さい", "umur,tahun"],
       ["なんさい", "berapa umur"],
+      ["おいくつ", "berapa umur(sopan)"],
+      ["はい", "iya"],
+      ["いいえ", "tidak"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
