--- a/kotoba.html
+++ b/kotoba.html
@@ -91,6 +91,9 @@
       ["おいくつ", "berapa umur(sopan)"],
       ["はい", "iya"],
       ["いいえ", "tidak"],
+      ["しつれいですが", "permisi"],
+      ["おなまえは?", "nama anda siapa?"],
+      ["はじめまして", "apa kabar(pertama kali)"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
