--- a/kotoba.html
+++ b/kotoba.html
@@ -94,6 +94,9 @@
       ["しつれいですが", "permisi"],
       ["おなまえは?", "nama anda siapa?"],
       ["はじめまして", "apa kabar(pertama kali)"],
+      ["どうぞよろしく (おねがいします)", "senang bertemu anda"],
+      ["こちらは~さんてす", ""],
+      ["~からきました", ""],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
