--- a/kotoba.html
+++ b/kotoba.html
@@ -95,8 +95,14 @@
       ["おなまえは?", "nama anda siapa?"],
       ["はじめまして", "apa kabar(pertama kali)"],
       ["どうぞよろしく (おねがいします)", "senang bertemu anda"],
-      ["こちらは~さんてす", ""],
-      ["~からきました", ""],
+      ["こちらは~さんてす", "ini adalah..(memprknalkan)"],
+      ["~からきました", "datang dari"],
+      ["アメリカ", "amerika"],
+      ["イギリス", "inggris"],
+      ["インド", "india"],
+      ["インドネシア", "indonesia"],
+      ["かんこく", "korea"],
+      ["タイ", "thailand"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
