--- a/kotoba.html
+++ b/kotoba.html
@@ -103,6 +103,11 @@
       ["インドネシア", "indonesia"],
       ["かんこく", "korea"],
       ["タイ", "thailand"],
+      ["ちゅうごく", "china"],
+      ["ドイツ", "jerman"],
+      ["にほん", "jepang"],
+      ["フランス", "prancis"],
+      ["ブラジル", "brazil"],
       ["kaisha", "perusahaan"],
       ["denwa", "telepon"],
       ["hon", "buku"],
