--- a/kosakata.html
+++ b/kosakata.html
@@ -79,7 +79,7 @@
       ["ban/yoru", "malam"],["yuube", "tadi malam"],["konban", "malam ini"],["ashita", "besok"],
       ["mainichi", "setiap hari"],["maiasa", "setiap pagi"],["maiban", "setiap malam"],
       ["konshuu", "minggu ini"],["senshuu", "minggu lalu"],["raishuu", "minggu depan"],
-      ["shikisai", "warna"],["pinku", "pink"],["anshoku", "gelap"],["meishoku", "cerah"],
+      ["shikisai", "warna"],["pinku", "pink"],["anshoku", "gelap(warna)"],["meishoku", "cerah(warna)"],
       ["kiiro", "kuning"],["kiniro/konjiki", "emas"],["giniro", "perak"],["kuroi", "hitam"]
     ];
     let questions = [], current = 0, score = 0;
