--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -97,7 +97,7 @@
       ["あおい", "biru"],
       ["あか", "merah"],
       ["あかい", "merah"],
-      ["あかるい", "cerah"],
+      ["あかるい", "cerah(cahaya/sifat)"],
       ["あき", "musim gugur"],
       ["あく,ひらく", "membuka, membeberkan"],
       ["あける", "membuka"],
