--- a/kuis.html
+++ b/kuis.html
@@ -77,7 +77,11 @@
       ["ま","ma"],["み","mi"],["む","mu"],["め","me"],["も","mo"],
       ["や","ya"],["ゆ","yu"],["よ","yo"],
       ["ら","ra"],["り","ri"],["る","ru"],["れ","re"],["ろ","ro"],
-      ["わ","wa"],["を","wo"],["ん","n"]
+      ["わ","wa"],["を","wo"],["ん","n"],["が", "ga"],["ぎ", "gi"],
+      ["ぐ", "gu"],["げ", "ge"],["ご", "go"],["ざ", "za"],["じ", "ji"],["ず", "zu"],
+      ["ぜ", "ze"],["ぞ", "zo"],["だ", "da"],["ぢ", "dji"],["づ", "dzu"],["で", "de"],
+      ["ど", "do"],["ば", "ba"],["び", "bi"],["ぶ", "bu"],["べ", "be"],["ぼ", "bo"],
+      ["ぱ", "pa"],["ぴ", "pi"],["ぷ", "pu"],["ぺ", "pe"],["ぽ", "po"]
     ];
     const katakanaDasar = hiraganaDasar.map(([kana, romaji]) => [
       String.fromCharCode(kana.charCodeAt(0) + 0x60), romaji
