--- a/kanji.html
+++ b/kanji.html
@@ -62,7 +62,7 @@
 
   <script>
     const data = [
-      ["水", "mizu"], ["火", "hi"], ["木", "ki"], ["金", "kane"], ["土", "tsuchi"],
+      ["一<br>hito(tsu)", "ichi"], ["二<br>futa(tsu)", "ni"], ["三<br>mit(tsu)", "san"],["四<br>yo(tsu)", "shi,yon"], ["五<br>itsu(tsu)", go"],
       ["日", "hi"], ["月", "tsuki"], ["山", "yama"], ["川", "kawa"], ["田", "ta"],
       ["人", "hito"], ["女", "onna"], ["男", "otoko"], ["子", "ko"], ["目", "me"],
       ["耳", "mimi"], ["口", "kuchi"], ["手", "te"], ["足", "ashi"], ["心", "kokoro"],
