--- a/kosakata.html
+++ b/kosakata.html
@@ -80,7 +80,10 @@
       ["mainichi", "setiap hari"],["maiasa", "setiap pagi"],["maiban", "setiap malam"],
       ["konshuu", "minggu ini"],["senshuu", "minggu lalu"],["raishuu", "minggu depan"],
       ["shikisai", "warna"],["pinku", "pink"],["anshoku", "gelap(warna)"],["meishoku", "cerah(warna)"],
-      ["kiiro", "kuning"],["kiniro/konjiki", "emas"],["giniro", "perak"],["kuroi", "hitam"]
+      ["kiiro", "kuning"],["kiniro/konjiki", "emas"],["giniro", "perak"],["kuroi", "hitam"],
+      ["ichigatsu", "januari"],["nigatsu", "februari"],["sangatsu", "maret"],["shigatsu", "april"],["gogatsu", "mei"],
+      ["rokugatsu", "juni"],["sichigatsu", "juli"],["hachigatsu", "agustus"],["kugatsu", "september"],["juugatsu", "oktober"],
+      ["juuichigatsu", "november"],["juunigatsu", "desember"]
     ];
     let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
