--- a/kotoba.html
+++ b/kotoba.html
@@ -118,7 +118,17 @@
       ["isu", "kursi"],
       ["tabemasu", "makan"],
       ["nomimasu", "minum"],
-      ["mimasu", "melihat"]
+      ["mimasu", "melihat"],
+      ["これ", "ini"],
+      ["それ", "itu"],
+      ["あれ", "itu"],
+      ["この～ ", "ini(+benda)"],
+      ["その～ ", "itu(+benda)"],
+      ["あの～ ", "itu(+benda)"],
+      ["ほん", "buku"],
+      ["じしょ", "kamus"],
+      ["ざっし", "majalah"],
+      ["しんぶん", "koran"]
     ];
 
     let questions = [];
