--- a/kanji.html
+++ b/kanji.html
@@ -92,7 +92,17 @@
       ["田<br>sawah", "den,ta"],
       ["人<br>orang", "jin,hito"], 
       ["女<br>perempuan", "jo,onna"], 
-      ["男<br>laki-laki", "dan,otoko"]
+      ["男<br>laki-laki", "dan,otoko"],
+      ["一<br>satu", "ichi,hito"],
+      ["二<br>dua", "ni,futa"],
+      ["三<br>tiga", "san,mittsu"],
+      ["四<br>empat", "shi,yon"],
+      ["五<br>lima", "go,itsusu"],
+      ["六<br>enam", "roku,muttsu"],
+      ["七<br>tujuh", "sichi,nana"],
+      ["八<br>delapan", " hachi,yattsu"],
+      ["九<br>sembilan", "kyuu,kokono"],
+      ["十<br>sepuluh", "juu,too"]
     ];
 
     let questions = [], current = 0, score = 0;
