--- a/kotoba.html
+++ b/kotoba.html
@@ -128,7 +128,17 @@
       ["ほん", "buku"],
       ["じしょ", "kamus"],
       ["ざっし", "majalah"],
-      ["しんぶん", "koran"]
+      ["しんぶん", "koran"],
+      ["ソート", "notes"],
+      ["てちょう", "buku catatan"],
+      ["めいし", "kartu nama"],
+      ["カード", "kartu"],
+      ["テレホンカード", "kartu telepon"],
+      ["えんぴつ", "pensil"],
+      ["ボールペン", "ball point"],
+      ["シャープペンシル", "pensil mekanik"],
+      ["かぎ", "kunci"],
+      ["とけい", "jam,arloji"]
     ];
 
     let questions = [];
