--- a/kotoba.html
+++ b/kotoba.html
@@ -138,7 +138,15 @@
       ["ボールペン", "ball point"],
       ["シャープペンシル", "pensil mekanik"],
       ["かぎ", "kunci"],
-      ["とけい", "jam,arloji"]
+      ["とけい", "jam,arloji"],
+      ["かさ", "payung"],
+      ["かばん", "tas"],
+      ["カャッート", "kaset"],
+      ["テープレコーダー", "tape recorder"],
+      ["テレビ", "televisi"],
+      ["ラジオ", "radio"],
+      ["カメラ", "kamera"],
+      ["コンピューター", "komputer"],
     ];
 
     let questions = [];
