--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <button onclick="goTo('kanji')">🈶 Kuis Kunyomi Kanji</button>
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
       <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
+      <button onclick="location.href='conversation'">🗒️ Percakapan Jepang</button>
     </div>
   </div>
 
