--- a/kanji.html
+++ b/kanji.html
@@ -85,24 +85,45 @@
 
   <script>
     const data = [
-      ["日<br>matahari", "nichi,hi"], 
-      ["月<br>bulan", "getsu,tsuki"], 
-      ["山<br>gunung", "san,yama"], 
-      ["川<br>sungai", "sen,kawa"], 
-      ["田<br>sawah", "den,ta"],
-      ["人<br>orang", "jin,hito"], 
-      ["女<br>perempuan", "jo,onna"], 
-      ["男<br>laki-laki", "dan,otoko"],
-      ["一<br>satu", "ichi,hito"],
-      ["二<br>dua", "ni,futa"],
-      ["三<br>tiga", "san,mittsu"],
-      ["四<br>empat", "shi,yon"],
-      ["五<br>lima", "go,itsusu"],
-      ["六<br>enam", "roku,muttsu"],
-      ["七<br>tujuh", "sichi,nana"],
-      ["八<br>delapan", " hachi,yattsu"],
-      ["九<br>sembilan", "kyuu,kokono"],
-      ["十<br>sepuluh", "juu,too"]
+      ["(日)本人<br>orang jepang", "(ni)hon,jin],
+      ["休(日)<br>hari libur", "kyuu(jitsu)"],
+      ["日<br>matahari", "hi"],
+      ["(日)本<br>jepang", "(ni)hon"],
+      ["(日)記<br>buku harian", "(ni)kki"],
+      ["三(日)<br>hari ke-3", "mik(ka)"],
+      ["今(日)<br>hari ini", "kyo(u)"],
+      ["毎(日)<br>setiap hari", "mai(nichi)"],
+      ["(日)曜(日)<br>minggu", "(nichi)you(bi)"],
+      ["今(月)<br>bulan ini", "kon(getsu)"],
+      ["一(月)<br>januari", "ichi(gatsu)"],
+      ["一ヶ(月)<br>satu bulan", "ikka(getsu)"],
+      ["月<br>bulan", "tsuki"],
+      ["(月)曜日<br>senin", "(getsu)youbi"],
+      ["来(月)<br>bulan depan", "rai(getsu)"],
+      ["佳(木)<br>pohon-pohon yang indah", "ka(boku)"],
+      ["木<br>pohon", "ki"],
+      ["(木)立<br>semak-semak", "(ko)dachi"],
+      ["(木)曜日<br>kamis", "(moku)youbi"],
+      ["(木)星<br>jupiter", "(moku)sei"],
+      ["大(木)<br>pohon tua", "tai(boku)"],
+      ["倒(木)<br>pohon tumbang", "tou(boku)"],
+      ["火(山)<br>gunung berapi", "ka(zan)"],
+      ["(山)火事<br>kebakaran hutan", "(yama)ka,ji"],
+      ["(山)田さん<br>yamada", "(yama)da,san"],
+      ["(山)元<br>kaki gunung", "(yama)moto"],
+      ["(山)側<br>sisi gunung", "(yama)gawa"],
+      ["人(山)<br>kerumunan orang", "hito(yama)"],
+      ["山<br>gunung", "yama"],
+      ["富士(山)<br>gunung", "fu,ji(san)"],
+      ["川<br>sungai", "kawa"],
+      ["(川)岸<br>tepi sungai", "(kawa)gi,shi"],
+      ["天の(川)<br>galaksi", "ama,no(gawa)"],
+      ["(川)床<br>dasar sungai", "(kawa)doko"],
+      ["(川)口<br>mulut sungai", "(kawa)guchi"],
+      ["(川)原<br>sungai kering", "(kawa)hara"],
+      ["(川)下<br>hilir", "(kawa)shimo"],
+      ["ナイル(川)<br>sungai nil", "na,i,ru(gawa)"],
+      ["河(川)<br>sungai", "ka(sen)"]
     ];
 
     let questions = [], current = 0, score = 0;
