--- a/kanji.html
+++ b/kanji.html
@@ -114,15 +114,15 @@
       ["(山)側<br>sisi gunung", "(yama)gawa"],
       ["人(山)<br>kerumunan orang", "hito(yama)"],
       ["山<br>gunung", "yama"],
-      ["富士(山)<br>gunung", "fu,ji(san)"],
+      ["富士(山)<br>gunung", "fu ji(san)"],
       ["川<br>sungai", "kawa"],
-      ["(川)岸<br>tepi sungai", "(kawa)gi,shi"],
+      ["(川)岸<br>tepi sungai", "(kawa)gi shi"],
       ["天の(川)<br>galaksi", "ama,no(gawa)"],
       ["(川)床<br>dasar sungai", "(kawa)doko"],
       ["(川)口<br>mulut sungai", "(kawa)guchi"],
       ["(川)原<br>sungai kering", "(kawa)hara"],
       ["(川)下<br>hilir", "(kawa)shimo"],
-      ["ナイル(川)<br>sungai nil", "na,i,ru(gawa)"],
+      ["ナイル(川)<br>sungai nil", "na i ru(gawa)"],
       ["河(川)<br>sungai", "ka(sen)"]
     ];
 
