--- a/kanji.html
+++ b/kanji.html
@@ -104,7 +104,7 @@
       ["大(木)<br>pohon tua", "boku"],
       ["倒(木)<br>pohon tumbang", "boku"],
       ["火(山)<br>gunung berapi", "san"],
-      ["(山)火事<br>kebakaran hutan", "yama,ji"],
+      ["(山)火事<br>kebakaran hutan", "yama"],
       ["(山)田さん<br>yamada", "yama"],
       ["(山)元<br>kaki gunung", "yama"],
       ["人(山)<br>kerumunan orang", "yama"],
