--- a/kotoba.html
+++ b/kotoba.html
@@ -147,6 +147,20 @@
       ["ラジオ", "radio"],
       ["カメラ", "kamera"],
       ["コンピューター", "komputer"],
+      ["じどうしゃ", "mobil"],
+      ["つくえ", "meja tulis"],
+      ["いつ", "kursi"],
+      ["ちこレート", "coklat"],
+      ["コーヒー", "kopi"],
+      ["えいご", "bahasa inggris"],
+      ["にほんご", "bahasa jepang"],
+      ["~ご", "bahasa~"],
+      ["なん", "apa"],
+      ["そう", "begitu"],
+      ["らがいます", "bukan/tidak betul/salah"],
+      ["そうですか", "begitukah?"],
+      ["あのう", "emmm"],
+      ["ほんのきもちです", "ini(menyerahkan sesuatu)"]
     ];
 
     let questions = [];
