--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -111,7 +111,13 @@
       ["あそぶ", "bermain"],
       ["あたたかい", "hangat"],
       ["あたま", "kepala"],
-      ["あたらし", "baru"]
+      ["あたらし", "baru"],
+      ["あちら" "sana"],
+      ["あつい", "panas(cuaca)"],
+      ["あつい", "panas(benda)"],
+      ["あつい", "tebal/dalam/berat"],
+      ["あっち", "disana"],
+      ["あと", "setelah itu"]
     ];
 
     let questions = [];
