--- a/kanji.html
+++ b/kanji.html
@@ -85,37 +85,21 @@
 
   <script>
     const data = [
-      ["(日)本人<br>orang jepang", "ni"],
-      ["休(日)<br>hari libur", "jitsu"],
-      ["日<br>matahari", "hi"],
-      ["三(日)<br>hari ke-3", "ka"],
-      ["今(日)<br>hari ini", "u"],
-      ["毎(日)<br>setiap hari", "nichi"],
-      ["今(月)<br>bulan ini", "getsu"],
-      ["一(月)<br>januari", "gatsu"],
-      ["一ヶ(月)<br>satu bulan", "getsu"],
+      ["日<br>matahari", "ni"],
       ["月<br>bulan", "tsuki"],
-      ["(月)曜日<br>senin", "getsu"],
-      ["佳(木)<br>pohon-pohon yang indah", "boku"],
       ["木<br>pohon", "ki"],
-      ["(木)立<br>semak-semak", "ko"],
-      ["(木)曜日<br>kamis", "moku"],
-      ["(木)星<br>jupiter", "moku"],
-      ["大(木)<br>pohon tua", "boku"],
-      ["倒(木)<br>pohon tumbang", "boku"],
-      ["火(山)<br>gunung berapi", "san"],
-      ["(山)火事<br>kebakaran hutan", "yama"],
-      ["(山)田さん<br>yamada", "yama"],
-      ["(山)元<br>kaki gunung", "yama"],
-      ["人(山)<br>kerumunan orang", "yama"],
       ["山<br>gunung", "yama"],
-      ["富士(山)<br>gunung fuji", "san"],
       ["川<br>sungai", "kawa"],
-      ["(川)岸<br>tepi sungai", "kawa"],
-      ["(川)床<br>dasar sungai", "kawa"],
-      ["(川)口<br>mulut sungai", "kawa"],
-      ["(川)原<br>sungai kering", "kawa"],
-      ["河(川)<br>sungai", "sen"]
+      ["田<br>sawah", "ta"],
+      ["人<br>manusia", "hito"],
+      ["口<br>mulut", "kuchi"],
+      ["車<br>kendaraan", "kuruma"],
+      ["門<br>gerbang", "kado"],
+      ["火<br>api", "hi"],
+      ["水<br>air", "mizu"],
+      ["室<br>kamar", "muro"],
+      ["家<br>rumah", "ie"],
+      ["度<br>derajat", "tabi"]
     ];
 
     let questions = [], current = 0, score = 0;
