--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -97,7 +96,7 @@
       ["あおい", "biru"],
       ["あか", "merah"],
       ["あかい", "merah"],
-      ["あかるい", "cerah(cahaya/sifat)"],
+      ["あかるい", "cerah(cahaya sifat)"],
       ["あき", "musim gugur"],
       ["あく,ひらく", "membuka, membeberkan"],
       ["あける", "membuka"],
@@ -115,7 +114,7 @@
       ["あちら" "sana"],
       ["あつい", "panas(cuaca)"],
       ["あつい", "panas(benda)"],
-      ["あつい", "tebal/dalam/berat"],
+      ["あつい", "tebal dalam berat"],
       ["あっち", "disana"],
       ["あと", "setelah itu"]
     ];
