--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -96,7 +96,7 @@
       ["あおい", "biru"],
       ["あか", "merah"],
       ["あかい", "merah"],
-      ["あかるい", "cerah(cahaya sifat)"],
+      ["あかるい", "cerah(cahaya/sifat)"],
       ["あき", "musim gugur"],
       ["あく,ひらく", "membuka, membeberkan"],
       ["あける", "membuka"],
@@ -111,10 +111,10 @@
       ["あたたかい", "hangat"],
       ["あたま", "kepala"],
       ["あたらし", "baru"],
-      ["あちら" "sana"],
+      ["あちら", "sana"],
       ["あつい", "panas(cuaca)"],
       ["あつい", "panas(benda)"],
-      ["あつい", "tebal dalam berat"],
+      ["あつい", "tebal/dalam/berat"],
       ["あっち", "disana"],
       ["あと", "setelah itu"]
     ];
