--- a/kanji.html
+++ b/kanji.html
@@ -99,7 +99,22 @@
       ["水<br>air", "mizu"],
       ["室<br>kamar", "muro"],
       ["家<br>rumah", "ie"],
-      ["度<br>derajat", "tabi"]
+      ["度<br>derajat", "tabi"],
+      ["金<br>emas", "kane"],
+      ["土<br>tanah", "tsuchi"],
+      ["子<br>anak", "ko"],
+      ["女<br>wanita", "onna"],
+      ["学<br>belajar", "mana"],
+      ["生<br>hidup", "i.kiru"],
+      ["先<br>sebelumnya", "saki"],
+      ["私<br>pribadi", "watashi"],
+      ["上<br>diatas/keatas", "ue"],
+      ["下<br>bawah", "shita"],
+      ["中<br>tengah", "naka"],
+      ["大<br>besar", "oo"],
+      ["英<br>hebat", "hanabusa"],
+      ["会<br>rapat", "a.u"],
+      ["首<br>leher", "kuhi"]
     ];
 
     let questions = [], current = 0, score = 0;
