--- a/kanji.html
+++ b/kanji.html
@@ -114,7 +114,21 @@
       ["大<br>besar", "oo"],
       ["英<br>hebat", "hanabusa"],
       ["会<br>rapat", "a.u"],
-      ["首<br>leher", "kuhi"]
+      ["首<br>leher", "kuhi"],
+      ["一<br>satu", "hito-"],
+      ["二<br>dua", "futa"],
+      ["三<br>tiga", "mittsu"],
+      ["四<br>empat", "yon"],
+      ["五<br>lima", "itsu"],
+      ["六<br>enam", "roku"],
+      ["七<br>tujuh", "nana"],
+      ["八<br>delapan", "you"],
+      ["九<br>sembilan", "kyuu"],
+      ["十<br>sepuluh", "too"],
+      ["千<br>ribu", "chi"],
+      ["万<br>sepuluh ribu", "yorozu"],
+      ["早<br>ratus", "momo"],
+      ["円<br>lingkaran", "maru.i"],
     ];
 
     let questions = [], current = 0, score = 0;
