--- a/kotoba.html
+++ b/kotoba.html
@@ -160,7 +160,8 @@
       ["らがいます", "bukan/tidak betul/salah"],
       ["そうですか", "begitukah?"],
       ["あのう", "emmm"],
-      ["ほんのきもちです", "ini(menyerahkan sesuatu)"]
+      ["ほんのきもちです", "ini(menyerahkan sesuatu)"],
+      ["どうぞ", "silahkan"]
     ];
 
     let questions = [];
