--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -116,7 +116,17 @@
       ["あつい", "panas(benda)"],
       ["あつい", "tebal/dalam/berat"],
       ["あっち", "disana"],
-      ["あと", "setelah itu"]
+      ["あと", "setelah itu"],
+      ["あなた", "kamu"],
+      ["あに", "kakak(laki-laki)"],
+      ["あね", "kakak(perempuan)"],
+      ["あの", "itu"],
+      ["アパート", "apartemen"],
+      ["あびる", "mandi"],
+      ["あぶない", "berbahaya"],
+      ["あまい", "manis"],
+      ["あまり", "tidak terlalu"],
+      ["あめ", "hujan"]
     ];
 
     let questions = [];
