--- a/kotoba.html
+++ b/kotoba.html
@@ -161,7 +161,10 @@
       ["そうですか", "begitukah?"],
       ["あのう", "emmm"],
       ["ほんのきもちです", "ini(menyerahkan sesuatu)"],
-      ["どうぞ", "silahkan"]
+      ["どうぞ", "silahkan"],
+      ["どうも", "terimakasih"],
+      ["(どうも)ありがとう(ございます)", "terimakasih banyak"],
+      ["ごれからおせわになります", "silahkan"]
     ];
 
     let questions = [];
