--- a/kanji.html
+++ b/kanji.html
@@ -85,50 +85,50 @@
 
   <script>
     const data = [
-      ["日<br>matahari", "ni"],
-      ["月<br>bulan", "tsuki"],
-      ["木<br>pohon", "ki"],
-      ["山<br>gunung", "yama"],
-      ["川<br>sungai", "kawa"],
-      ["田<br>sawah", "ta"],
-      ["人<br>manusia", "hito"],
-      ["口<br>mulut", "kuchi"],
-      ["車<br>kendaraan", "kuruma"],
-      ["門<br>gerbang", "kado"],
-      ["火<br>api", "hi"],
-      ["水<br>air", "mizu"],
-      ["室<br>kamar", "muro"],
-      ["家<br>rumah", "ie"],
-      ["度<br>derajat", "tabi"],
-      ["金<br>emas", "kane"],
-      ["土<br>tanah", "tsuchi"],
-      ["子<br>anak", "ko"],
-      ["女<br>wanita", "onna"],
-      ["学<br>belajar", "mana"],
-      ["生<br>hidup", "i.kiru"],
-      ["先<br>sebelumnya", "saki"],
-      ["私<br>pribadi", "watashi"],
-      ["上<br>diatas/keatas", "ue"],
-      ["下<br>bawah", "shita"],
-      ["中<br>tengah", "naka"],
-      ["大<br>besar", "oo"],
-      ["英<br>hebat", "hanabusa"],
-      ["会<br>rapat", "a.u"],
-      ["首<br>leher", "kuhi"],
-      ["一<br>satu", "hito-"],
-      ["二<br>dua", "futa"],
-      ["三<br>tiga", "mittsu"],
-      ["四<br>empat", "yon"],
-      ["五<br>lima", "itsu"],
-      ["六<br>enam", "roku"],
-      ["七<br>tujuh", "nana"],
-      ["八<br>delapan", "you"],
-      ["九<br>sembilan", "kyuu"],
-      ["十<br>sepuluh", "too"],
-      ["千<br>ribu", "chi"],
-      ["万<br>sepuluh ribu", "yorozu"],
-      ["早<br>ratus", "momo"],
-      ["円<br>lingkaran", "maru.i"],
+      ["日", "matahari"],
+      ["月", "bulan"],
+      ["木", "pohon"],
+      ["山", "gunung"],
+      ["川", "sungai"],
+      ["田", "sawah"],
+      ["人", "manusia"],
+      ["口", "mulut"],
+      ["車", "kendaraan"],
+      ["門", "gerbang"],
+      ["火", "api"],
+      ["水", "air"],
+      ["室", "kamar"],
+      ["家", "rumah"],
+      ["度", "kamar"],
+      ["金", "emas"],
+      ["土", "tanah"],
+      ["子", "anak"],
+      ["女", "wanita"],
+      ["学", "belajar"],
+      ["生", "hidup"],
+      ["先", "sebelumnya"],
+      ["私", "pribadi"],
+      ["上", "diatas/keatas"],
+      ["下", "bawah"],
+      ["中", "tengah"],
+      ["大", "besar"],
+      ["英", "hebat"],
+      ["会", "rapat"],
+      ["首", "leher"],
+      ["一", "satu-"],
+      ["二", "dua"],
+      ["三", "tiga"],
+      ["四", "empat"],
+      ["五", "lima"],
+      ["六", "enam"],
+      ["七", "tujuh"],
+      ["八", "delapan"],
+      ["九", "sembilan"],
+      ["十", "sepuluh"],
+      ["千", "ribu"],
+      ["万", "sepuluh ribu"],
+      ["早", "ratus"],
+      ["円", "lingkaran"],
     ];
 
     let questions = [], current = 0, score = 0;
