--- a/kanji.html
+++ b/kanji.html
@@ -129,6 +129,18 @@
       ["万", "sepuluh ribu"],
       ["早", "ratus"],
       ["円", "lingkaran"],
+      ["小", "kecil"],
+      ["本", "buku"],
+      ["半", "setengah"],
+      ["分", "bagian"],
+      ["力", "kekuasaan"],
+      ["何", "apa"],
+      ["目", "mata"],
+      ["耳", "telinga"],
+      ["手", "tangan"],
+      ["足", "kaki"],
+      ["雨", "hujan"],
+      ["米", "beras"]
     ];
 
     let questions = [], current = 0, score = 0;
